@@ -314,8 +314,9 @@ delete-core-confirmation=DELETE HEX CORE?
 supercharge-tooltip-header=Supercharge
 supercharge-tooltip-body=Make the remaining resources of this hex infinite.
 upgrade-quality-tooltip-header=Upgrade Quality
-trades-quality-info=The quality selected above does not affect the qualities that can be traded. It's only for reference.
-trades-quality-warning=Coins in trade inputs are __1__% higher for this quality.
+trades-quality-info=The quality selected above does not limit the tradable qualities.
+trades-quality-warning-1=Coins in trade inputs are __1__ higher for this quality.
+trades-quality-warning-2=Trades have __1__ less productivity for this quality.
 
 [hextorio-gui]
 item-value=Item Value
@@ -349,6 +350,7 @@ trade-contents=Trade Contents
 processing-finished=Listed __1__ trades.
 total-input-value=Total Input Value: __1__
 total-output-value=Total Output Value: __1__
+total-output-with-prod=Total Output w/ Prod.: __1__
 productivity-bonus=Productivity
 cost=Cost: __1__
 show-only-claimed=Show only claimed
